syntax = "proto3";

package secret;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/KirylJazzSax/secret-keeper/internal/common/gen/auth";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expires_at = 2;
}

service AuthService {
    rpc LoginUser(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Login with email and password";
			summary: "Login with email and password";
        };
    }
}
