syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login.proto";
import "rpc_show_secret.proto";
import "rpc_save_secret.proto";
import "rpc_secrets_list.proto";
import "rpc_delete_secret.proto";
import "rpc_delete_all_secrets.proto";

option go_package = "./;pb";

service SecretKeeper {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create-user"
            body: "*"
        };
    }
    rpc LoginUser(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }
    rpc SaveSecret(SaveSecretRequest) returns (SaveSecretResponse) {
        option (google.api.http) = {
            post: "/v1/secrets"
            body: "*"
        };
    }
    rpc SecretsList(SecretsListRequest) returns (SecretsListResponse) {
        option (google.api.http) = {
            get: "/v1/secrets"
        };
    }
    rpc ShowSecret(ShowSecretRequest) returns (ShowSecretResponse) {
        option (google.api.http) = {
            post: "/v1/secrets/{id}",
            body: "*"
        };
    }
    rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {
        option (google.api.http) = {
            delete: "/v1/secrets/{id}"
        };
    }
    rpc DeleteAllSecrets(DeleteAllSecretsRequest) returns (DeleteAllSecretsResponse) {
        option (google.api.http) = {
            delete: "/v1/secrets"
        };
    }
}